embedded/sql/y.output

state 0
	$accept: .sql $end 

	CREATE  shift 10
	USE  shift 11
	ALTER  shift 12
	BEGIN  shift 6
	INSERT  shift 13
	UPSERT  shift 14
	SELECT  shift 7
	.  error

	sql  goto 1
	sqlstmts  goto 2
	sqlstmt  goto 3
	dstmt  goto 5
	ddlstmt  goto 8
	dmlstmt  goto 9
	dqlstmt  goto 4

state 1
	$accept:  sql.$end 

	$end  accept
	.  error


state 2
	sql:  sqlstmts.    (1)

	.  reduce 1 (src line 123)


state 3
	sqlstmts:  sqlstmt.opt_separator 
	sqlstmts:  sqlstmt.STMT_SEPARATOR sqlstmts 
	opt_separator: .    (5)

	STMT_SEPARATOR  shift 16
	.  reduce 5 (src line 145)

	opt_separator  goto 15

state 4
	sqlstmts:  dqlstmt.opt_separator 
	opt_separator: .    (5)

	STMT_SEPARATOR  shift 18
	.  reduce 5 (src line 145)

	opt_separator  goto 17

state 5
	sqlstmt:  dstmt.    (7)

	.  reduce 7 (src line 147)


state 6
	sqlstmt:  BEGIN.TRANSACTION dstmts COMMIT 

	TRANSACTION  shift 19
	.  error


state 7
	dqlstmt:  SELECT.opt_distinct opt_selectors FROM ds opt_joins opt_where opt_groupby opt_having opt_orderby opt_limit opt_as 
	opt_distinct: .    (47)

	DISTINCT  shift 21
	.  reduce 47 (src line 363)

	opt_distinct  goto 20

state 8
	dstmt:  ddlstmt.    (9)

	.  reduce 9 (src line 158)


state 9
	dstmt:  dmlstmt.    (10)

	.  reduce 10 (src line 158)


state 10
	ddlstmt:  CREATE.DATABASE IDENTIFIER 
	ddlstmt:  CREATE.TABLE opt_if_not_exists IDENTIFIER '(' colsSpec ',' PRIMARY KEY IDENTIFIER ')' 
	ddlstmt:  CREATE.INDEX ON IDENTIFIER '(' IDENTIFIER ')' 

	DATABASE  shift 22
	TABLE  shift 23
	INDEX  shift 24
	.  error


state 11
	ddlstmt:  USE.DATABASE IDENTIFIER 
	ddlstmt:  USE.SNAPSHOT opt_since opt_as_before 

	DATABASE  shift 25
	SNAPSHOT  shift 26
	.  error


state 12
	ddlstmt:  ALTER.TABLE IDENTIFIER ADD COLUMN colSpec 

	TABLE  shift 27
	.  error


state 13
	dmlstmt:  INSERT.INTO tableRef '(' ids ')' VALUES rows 

	INTO  shift 28
	.  error


state 14
	dmlstmt:  UPSERT.INTO tableRef '(' ids ')' VALUES rows 

	INTO  shift 29
	.  error


state 15
	sqlstmts:  sqlstmt opt_separator.    (2)

	.  reduce 2 (src line 129)


state 16
	sqlstmts:  sqlstmt STMT_SEPARATOR.sqlstmts 
	opt_separator:  STMT_SEPARATOR.    (6)

	CREATE  shift 10
	USE  shift 11
	ALTER  shift 12
	BEGIN  shift 6
	INSERT  shift 13
	UPSERT  shift 14
	SELECT  shift 7
	.  reduce 6 (src line 145)

	sqlstmts  goto 30
	sqlstmt  goto 3
	dstmt  goto 5
	ddlstmt  goto 8
	dmlstmt  goto 9
	dqlstmt  goto 4

state 17
	sqlstmts:  dqlstmt opt_separator.    (3)

	.  reduce 3 (src line 134)


state 18
	opt_separator:  STMT_SEPARATOR.    (6)

	.  reduce 6 (src line 145)


state 19
	sqlstmt:  BEGIN TRANSACTION.dstmts COMMIT 

	CREATE  shift 10
	USE  shift 11
	ALTER  shift 12
	INSERT  shift 13
	UPSERT  shift 14
	.  error

	dstmts  goto 31
	dstmt  goto 32
	ddlstmt  goto 8
	dmlstmt  goto 9

state 20
	dqlstmt:  SELECT opt_distinct.opt_selectors FROM ds opt_joins opt_where opt_groupby opt_having opt_orderby opt_limit opt_as 

	IDENTIFIER  shift 39
	AGGREGATE_FUNC  shift 38
	'*'  shift 34
	.  error

	selector  goto 36
	opt_selectors  goto 33
	selectors  goto 35
	col  goto 37

state 21
	opt_distinct:  DISTINCT.    (48)

	.  reduce 48 (src line 367)


state 22
	ddlstmt:  CREATE DATABASE.IDENTIFIER 

	IDENTIFIER  shift 40
	.  error


state 23
	ddlstmt:  CREATE TABLE.opt_if_not_exists IDENTIFIER '(' colsSpec ',' PRIMARY KEY IDENTIFIER ')' 
	opt_if_not_exists: .    (21)

	IF  shift 42
	.  reduce 21 (src line 212)

	opt_if_not_exists  goto 41

state 24
	ddlstmt:  CREATE INDEX.ON IDENTIFIER '(' IDENTIFIER ')' 

	ON  shift 43
	.  error


state 25
	ddlstmt:  USE DATABASE.IDENTIFIER 

	IDENTIFIER  shift 44
	.  error


state 26
	ddlstmt:  USE SNAPSHOT.opt_since opt_as_before 
	opt_since: .    (19)

	SINCE  shift 46
	.  reduce 19 (src line 202)

	opt_since  goto 45

state 27
	ddlstmt:  ALTER TABLE.IDENTIFIER ADD COLUMN colSpec 

	IDENTIFIER  shift 47
	.  error


state 28
	dmlstmt:  INSERT INTO.tableRef '(' ids ')' VALUES rows 

	IDENTIFIER  shift 49
	.  error

	tableRef  goto 48

state 29
	dmlstmt:  UPSERT INTO.tableRef '(' ids ')' VALUES rows 

	IDENTIFIER  shift 49
	.  error

	tableRef  goto 50

state 30
	sqlstmts:  sqlstmt STMT_SEPARATOR sqlstmts.    (4)

	.  reduce 4 (src line 139)


state 31
	sqlstmt:  BEGIN TRANSACTION dstmts.COMMIT 

	COMMIT  shift 51
	.  error


state 32
	dstmts:  dstmt.opt_separator 
	dstmts:  dstmt.STMT_SEPARATOR dstmts 
	opt_separator: .    (5)

	STMT_SEPARATOR  shift 53
	.  reduce 5 (src line 145)

	opt_separator  goto 52

state 33
	dqlstmt:  SELECT opt_distinct opt_selectors.FROM ds opt_joins opt_where opt_groupby opt_having opt_orderby opt_limit opt_as 

	FROM  shift 54
	.  error


state 34
	opt_selectors:  '*'.    (49)

	.  reduce 49 (src line 373)


state 35
	opt_selectors:  selectors.    (50)
	selectors:  selectors.',' selector opt_as 

	','  shift 55
	.  reduce 50 (src line 378)


state 36
	selectors:  selector.opt_as 
	opt_as: .    (86)

	AS  shift 57
	.  reduce 86 (src line 571)

	opt_as  goto 56

state 37
	selector:  col.    (53)

	.  reduce 53 (src line 397)


state 38
	selector:  AGGREGATE_FUNC.'(' ')' 
	selector:  AGGREGATE_FUNC.'(' col ')' 

	'('  shift 58
	.  error


state 39
	col:  IDENTIFIER.    (56)
	col:  IDENTIFIER.'.' IDENTIFIER 
	col:  IDENTIFIER.'.' IDENTIFIER '.' IDENTIFIER 

	'.'  shift 59
	.  reduce 56 (src line 413)


state 40
	ddlstmt:  CREATE DATABASE IDENTIFIER.    (13)

	.  reduce 13 (src line 171)


state 41
	ddlstmt:  CREATE TABLE opt_if_not_exists.IDENTIFIER '(' colsSpec ',' PRIMARY KEY IDENTIFIER ')' 

	IDENTIFIER  shift 60
	.  error


state 42
	opt_if_not_exists:  IF.NOT EXISTS 

	NOT  shift 61
	.  error


state 43
	ddlstmt:  CREATE INDEX ON.IDENTIFIER '(' IDENTIFIER ')' 

	IDENTIFIER  shift 62
	.  error


state 44
	ddlstmt:  USE DATABASE IDENTIFIER.    (14)

	.  reduce 14 (src line 176)


state 45
	ddlstmt:  USE SNAPSHOT opt_since.opt_as_before 
	opt_as_before: .    (64)

	BEFORE  shift 64
	.  reduce 64 (src line 458)

	opt_as_before  goto 63

state 46
	opt_since:  SINCE.TX NUMBER 

	TX  shift 65
	.  error


state 47
	ddlstmt:  ALTER TABLE IDENTIFIER.ADD COLUMN colSpec 

	ADD  shift 66
	.  error


state 48
	dmlstmt:  INSERT INTO tableRef.'(' ids ')' VALUES rows 

	'('  shift 67
	.  error


state 49
	tableRef:  IDENTIFIER.    (62)
	tableRef:  IDENTIFIER.'.' IDENTIFIER 

	'.'  shift 68
	.  reduce 62 (src line 447)


state 50
	dmlstmt:  UPSERT INTO tableRef.'(' ids ')' VALUES rows 

	'('  shift 69
	.  error


state 51
	sqlstmt:  BEGIN TRANSACTION dstmts COMMIT.    (8)

	.  reduce 8 (src line 152)


state 52
	dstmts:  dstmt opt_separator.    (11)

	.  reduce 11 (src line 160)


state 53
	opt_separator:  STMT_SEPARATOR.    (6)
	dstmts:  dstmt STMT_SEPARATOR.dstmts 

	CREATE  shift 10
	USE  shift 11
	ALTER  shift 12
	INSERT  shift 13
	UPSERT  shift 14
	.  reduce 6 (src line 145)

	dstmts  goto 70
	dstmt  goto 32
	ddlstmt  goto 8
	dmlstmt  goto 9

state 54
	dqlstmt:  SELECT opt_distinct opt_selectors FROM.ds opt_joins opt_where opt_groupby opt_having opt_orderby opt_limit opt_as 

	IDENTIFIER  shift 49
	'('  shift 73
	.  error

	ds  goto 71
	tableRef  goto 72

state 55
	selectors:  selectors ','.selector opt_as 

	IDENTIFIER  shift 39
	AGGREGATE_FUNC  shift 38
	.  error

	selector  goto 74
	col  goto 37

state 56
	selectors:  selector opt_as.    (51)

	.  reduce 51 (src line 384)


state 57
	opt_as:  AS.IDENTIFIER 

	IDENTIFIER  shift 75
	.  error


state 58
	selector:  AGGREGATE_FUNC '('.')' 
	selector:  AGGREGATE_FUNC '('.col ')' 

	IDENTIFIER  shift 39
	')'  shift 76
	.  error

	col  goto 77

state 59
	col:  IDENTIFIER '.'.IDENTIFIER 
	col:  IDENTIFIER '.'.IDENTIFIER '.' IDENTIFIER 

	IDENTIFIER  shift 78
	.  error


state 60
	ddlstmt:  CREATE TABLE opt_if_not_exists IDENTIFIER.'(' colsSpec ',' PRIMARY KEY IDENTIFIER ')' 

	'('  shift 79
	.  error


state 61
	opt_if_not_exists:  IF NOT.EXISTS 

	EXISTS  shift 80
	.  error


state 62
	ddlstmt:  CREATE INDEX ON IDENTIFIER.'(' IDENTIFIER ')' 

	'('  shift 81
	.  error


state 63
	ddlstmt:  USE SNAPSHOT opt_since opt_as_before.    (15)

	.  reduce 15 (src line 181)


state 64
	opt_as_before:  BEFORE.TX NUMBER 

	TX  shift 82
	.  error


state 65
	opt_since:  SINCE TX.NUMBER 

	NUMBER  shift 83
	.  error


state 66
	ddlstmt:  ALTER TABLE IDENTIFIER ADD.COLUMN colSpec 

	COLUMN  shift 84
	.  error


state 67
	dmlstmt:  INSERT INTO tableRef '('.ids ')' VALUES rows 

	IDENTIFIER  shift 86
	.  error

	ids  goto 85

state 68
	tableRef:  IDENTIFIER '.'.IDENTIFIER 

	IDENTIFIER  shift 87
	.  error


state 69
	dmlstmt:  UPSERT INTO tableRef '('.ids ')' VALUES rows 

	IDENTIFIER  shift 86
	.  error

	ids  goto 88

state 70
	dstmts:  dstmt STMT_SEPARATOR dstmts.    (12)

	.  reduce 12 (src line 165)


state 71
	dqlstmt:  SELECT opt_distinct opt_selectors FROM ds.opt_joins opt_where opt_groupby opt_having opt_orderby opt_limit opt_as 
	opt_joins: .    (66)

	JOINTYPE  shift 92
	.  reduce 66 (src line 468)

	opt_joins  goto 89
	joins  goto 90
	join  goto 91

state 72
	ds:  tableRef.    (59)

	.  reduce 59 (src line 429)


state 73
	ds:  '('.tableRef opt_as_before opt_as ')' 
	ds:  '('.dqlstmt ')' 

	SELECT  shift 7
	IDENTIFIER  shift 49
	.  error

	dqlstmt  goto 94
	tableRef  goto 93

state 74
	selectors:  selectors ',' selector.opt_as 
	opt_as: .    (86)

	AS  shift 57
	.  reduce 86 (src line 571)

	opt_as  goto 95

state 75
	opt_as:  AS IDENTIFIER.    (87)

	.  reduce 87 (src line 575)


state 76
	selector:  AGGREGATE_FUNC '(' ')'.    (54)

	.  reduce 54 (src line 402)


state 77
	selector:  AGGREGATE_FUNC '(' col.')' 

	')'  shift 96
	.  error


state 78
	col:  IDENTIFIER '.' IDENTIFIER.    (57)
	col:  IDENTIFIER '.' IDENTIFIER.'.' IDENTIFIER 

	'.'  shift 97
	.  reduce 57 (src line 418)


state 79
	ddlstmt:  CREATE TABLE opt_if_not_exists IDENTIFIER '('.colsSpec ',' PRIMARY KEY IDENTIFIER ')' 

	IDENTIFIER  shift 100
	.  error

	colsSpec  goto 98
	colSpec  goto 99

state 80
	opt_if_not_exists:  IF NOT EXISTS.    (22)

	.  reduce 22 (src line 216)


state 81
	ddlstmt:  CREATE INDEX ON IDENTIFIER '('.IDENTIFIER ')' 

	IDENTIFIER  shift 101
	.  error


state 82
	opt_as_before:  BEFORE TX.NUMBER 

	NUMBER  shift 102
	.  error


state 83
	opt_since:  SINCE TX NUMBER.    (20)

	.  reduce 20 (src line 206)


state 84
	ddlstmt:  ALTER TABLE IDENTIFIER ADD COLUMN.colSpec 

	IDENTIFIER  shift 100
	.  error

	colSpec  goto 103

state 85
	dmlstmt:  INSERT INTO tableRef '(' ids.')' VALUES rows 
	ids:  ids.',' IDENTIFIER 

	','  shift 105
	')'  shift 104
	.  error


state 86
	ids:  IDENTIFIER.    (28)

	.  reduce 28 (src line 250)


state 87
	tableRef:  IDENTIFIER '.' IDENTIFIER.    (63)

	.  reduce 63 (src line 452)


state 88
	dmlstmt:  UPSERT INTO tableRef '(' ids.')' VALUES rows 
	ids:  ids.',' IDENTIFIER 

	','  shift 105
	')'  shift 106
	.  error


state 89
	dqlstmt:  SELECT opt_distinct opt_selectors FROM ds opt_joins.opt_where opt_groupby opt_having opt_orderby opt_limit opt_as 
	opt_where: .    (71)

	WHERE  shift 108
	.  reduce 71 (src line 495)

	opt_where  goto 107

state 90
	opt_joins:  joins.    (67)

	.  reduce 67 (src line 472)


state 91
	joins:  join.    (68)
	joins:  join.joins 

	JOINTYPE  shift 92
	.  reduce 68 (src line 478)

	joins  goto 109
	join  goto 91

state 92
	join:  JOINTYPE.JOIN ds ON boolExp 

	JOIN  shift 110
	.  error


state 93
	ds:  '(' tableRef.opt_as_before opt_as ')' 
	opt_as_before: .    (64)

	BEFORE  shift 64
	.  reduce 64 (src line 458)

	opt_as_before  goto 111

state 94
	ds:  '(' dqlstmt.')' 

	')'  shift 112
	.  error


state 95
	selectors:  selectors ',' selector opt_as.    (52)

	.  reduce 52 (src line 390)


state 96
	selector:  AGGREGATE_FUNC '(' col ')'.    (55)

	.  reduce 55 (src line 407)


state 97
	col:  IDENTIFIER '.' IDENTIFIER '.'.IDENTIFIER 

	IDENTIFIER  shift 113
	.  error


state 98
	ddlstmt:  CREATE TABLE opt_if_not_exists IDENTIFIER '(' colsSpec.',' PRIMARY KEY IDENTIFIER ')' 
	colsSpec:  colsSpec.',' colSpec 

	','  shift 114
	.  error


state 99
	colsSpec:  colSpec.    (41)

	.  reduce 41 (src line 319)


state 100
	colSpec:  IDENTIFIER.TYPE opt_not_null 

	TYPE  shift 115
	.  error


state 101
	ddlstmt:  CREATE INDEX ON IDENTIFIER '(' IDENTIFIER.')' 

	')'  shift 116
	.  error


state 102
	opt_as_before:  BEFORE TX NUMBER.    (65)

	.  reduce 65 (src line 462)


state 103
	ddlstmt:  ALTER TABLE IDENTIFIER ADD COLUMN colSpec.    (18)

	.  reduce 18 (src line 196)


state 104
	dmlstmt:  INSERT INTO tableRef '(' ids ')'.VALUES rows 

	VALUES  shift 117
	.  error


state 105
	ids:  ids ','.IDENTIFIER 

	IDENTIFIER  shift 118
	.  error


state 106
	dmlstmt:  UPSERT INTO tableRef '(' ids ')'.VALUES rows 

	VALUES  shift 119
	.  error


state 107
	dqlstmt:  SELECT opt_distinct opt_selectors FROM ds opt_joins opt_where.opt_groupby opt_having opt_orderby opt_limit opt_as 
	opt_groupby: .    (73)

	GROUP  shift 121
	.  reduce 73 (src line 505)

	opt_groupby  goto 120

state 108
	opt_where:  WHERE.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 122
	binExp  goto 125

state 109
	joins:  join joins.    (69)

	.  reduce 69 (src line 483)


state 110
	join:  JOINTYPE JOIN.ds ON boolExp 

	IDENTIFIER  shift 49
	'('  shift 73
	.  error

	ds  goto 137
	tableRef  goto 72

state 111
	ds:  '(' tableRef opt_as_before.opt_as ')' 
	opt_as: .    (86)

	AS  shift 57
	.  reduce 86 (src line 571)

	opt_as  goto 138

state 112
	ds:  '(' dqlstmt ')'.    (61)

	.  reduce 61 (src line 441)


state 113
	col:  IDENTIFIER '.' IDENTIFIER '.' IDENTIFIER.    (58)

	.  reduce 58 (src line 423)


state 114
	ddlstmt:  CREATE TABLE opt_if_not_exists IDENTIFIER '(' colsSpec ','.PRIMARY KEY IDENTIFIER ')' 
	colsSpec:  colsSpec ','.colSpec 

	PRIMARY  shift 139
	IDENTIFIER  shift 100
	.  error

	colSpec  goto 140

state 115
	colSpec:  IDENTIFIER TYPE.opt_not_null 
	opt_not_null: .    (44)

	NOT  shift 142
	.  reduce 44 (src line 336)

	opt_not_null  goto 141

state 116
	ddlstmt:  CREATE INDEX ON IDENTIFIER '(' IDENTIFIER ')'.    (17)

	.  reduce 17 (src line 191)


state 117
	dmlstmt:  INSERT INTO tableRef '(' ids ')' VALUES.rows 

	'('  shift 145
	.  error

	rows  goto 143
	row  goto 144

state 118
	ids:  ids ',' IDENTIFIER.    (29)

	.  reduce 29 (src line 255)


state 119
	dmlstmt:  UPSERT INTO tableRef '(' ids ')' VALUES.rows 

	'('  shift 145
	.  error

	rows  goto 146
	row  goto 144

state 120
	dqlstmt:  SELECT opt_distinct opt_selectors FROM ds opt_joins opt_where opt_groupby.opt_having opt_orderby opt_limit opt_as 
	opt_having: .    (75)

	HAVING  shift 148
	.  reduce 75 (src line 515)

	opt_having  goto 147

state 121
	opt_groupby:  GROUP.BY cols 

	BY  shift 149
	.  error


state 122
	opt_where:  WHERE boolExp.    (72)
	binExp:  boolExp.'+' boolExp 
	binExp:  boolExp.'-' boolExp 
	binExp:  boolExp.'/' boolExp 
	binExp:  boolExp.'*' boolExp 
	binExp:  boolExp.LOP boolExp 
	binExp:  boolExp.CMPOP boolExp 

	LOP  shift 154
	CMPOP  shift 155
	'+'  shift 150
	'-'  shift 151
	'*'  shift 153
	'/'  shift 152
	.  reduce 72 (src line 499)


state 123
	boolExp:  selector.    (88)
	boolExp:  selector.LIKE VARCHAR 

	LIKE  shift 156
	.  reduce 88 (src line 581)


state 124
	boolExp:  val.    (89)

	.  reduce 89 (src line 586)


state 125
	boolExp:  binExp.    (90)

	.  reduce 90 (src line 591)


state 126
	boolExp:  NOT.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 157
	binExp  goto 125

state 127
	boolExp:  '-'.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 158
	binExp  goto 125

state 128
	boolExp:  '('.boolExp ')' 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 159
	binExp  goto 125

state 129
	boolExp:  EXISTS.'(' dqlstmt ')' 

	'('  shift 160
	.  error


state 130
	val:  NUMBER.    (34)

	.  reduce 34 (src line 283)


state 131
	val:  VARCHAR.    (35)

	.  reduce 35 (src line 288)


state 132
	val:  BOOLEAN.    (36)

	.  reduce 36 (src line 293)


state 133
	val:  BLOB.    (37)

	.  reduce 37 (src line 298)


state 134
	val:  IDENTIFIER.'(' ')' 
	col:  IDENTIFIER.    (56)
	col:  IDENTIFIER.'.' IDENTIFIER 
	col:  IDENTIFIER.'.' IDENTIFIER '.' IDENTIFIER 

	'.'  shift 59
	'('  shift 161
	.  reduce 56 (src line 413)


state 135
	val:  '@'.IDENTIFIER 

	IDENTIFIER  shift 162
	.  error


state 136
	val:  NULL.    (40)

	.  reduce 40 (src line 313)


state 137
	join:  JOINTYPE JOIN ds.ON boolExp 

	ON  shift 163
	.  error


state 138
	ds:  '(' tableRef opt_as_before opt_as.')' 

	')'  shift 164
	.  error


state 139
	ddlstmt:  CREATE TABLE opt_if_not_exists IDENTIFIER '(' colsSpec ',' PRIMARY.KEY IDENTIFIER ')' 

	KEY  shift 165
	.  error


state 140
	colsSpec:  colsSpec ',' colSpec.    (42)

	.  reduce 42 (src line 324)


state 141
	colSpec:  IDENTIFIER TYPE opt_not_null.    (43)

	.  reduce 43 (src line 330)


state 142
	opt_not_null:  NOT.NULL 

	NULL  shift 166
	.  error


state 143
	dmlstmt:  INSERT INTO tableRef '(' ids ')' VALUES rows.    (23)
	rows:  rows.',' row 

	','  shift 167
	.  reduce 23 (src line 222)


state 144
	rows:  row.    (25)

	.  reduce 25 (src line 233)


state 145
	row:  '('.values ')' 

	NULL  shift 136
	IDENTIFIER  shift 170
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	'@'  shift 135
	.  error

	values  goto 168
	val  goto 169

state 146
	dmlstmt:  UPSERT INTO tableRef '(' ids ')' VALUES rows.    (24)
	rows:  rows.',' row 

	','  shift 167
	.  reduce 24 (src line 227)


state 147
	dqlstmt:  SELECT opt_distinct opt_selectors FROM ds opt_joins opt_where opt_groupby opt_having.opt_orderby opt_limit opt_as 
	opt_orderby: .    (79)

	ORDER  shift 172
	.  reduce 79 (src line 535)

	opt_orderby  goto 171

state 148
	opt_having:  HAVING.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 173
	binExp  goto 125

state 149
	opt_groupby:  GROUP BY.cols 

	IDENTIFIER  shift 39
	.  error

	cols  goto 174
	col  goto 175

state 150
	binExp:  boolExp '+'.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 176
	binExp  goto 125

state 151
	binExp:  boolExp '-'.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 177
	binExp  goto 125

state 152
	binExp:  boolExp '/'.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 178
	binExp  goto 125

state 153
	binExp:  boolExp '*'.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 179
	binExp  goto 125

state 154
	binExp:  boolExp LOP.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 180
	binExp  goto 125

state 155
	binExp:  boolExp CMPOP.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 181
	binExp  goto 125

state 156
	boolExp:  selector LIKE.VARCHAR 

	VARCHAR  shift 182
	.  error


state 157
	boolExp:  NOT boolExp.    (91)
	binExp:  boolExp.'+' boolExp 
	binExp:  boolExp.'-' boolExp 
	binExp:  boolExp.'/' boolExp 
	binExp:  boolExp.'*' boolExp 
	binExp:  boolExp.LOP boolExp 
	binExp:  boolExp.CMPOP boolExp 

	CMPOP  shift 155
	'+'  shift 150
	'-'  shift 151
	'*'  shift 153
	'/'  shift 152
	.  reduce 91 (src line 596)


state 158
	boolExp:  '-' boolExp.    (92)
	binExp:  boolExp.'+' boolExp 
	binExp:  boolExp.'-' boolExp 
	binExp:  boolExp.'/' boolExp 
	binExp:  boolExp.'*' boolExp 
	binExp:  boolExp.LOP boolExp 
	binExp:  boolExp.CMPOP boolExp 

	'*'  shift 153
	'/'  shift 152
	.  reduce 92 (src line 601)


state 159
	boolExp:  '(' boolExp.')' 
	binExp:  boolExp.'+' boolExp 
	binExp:  boolExp.'-' boolExp 
	binExp:  boolExp.'/' boolExp 
	binExp:  boolExp.'*' boolExp 
	binExp:  boolExp.LOP boolExp 
	binExp:  boolExp.CMPOP boolExp 

	LOP  shift 154
	CMPOP  shift 155
	'+'  shift 150
	'-'  shift 151
	'*'  shift 153
	'/'  shift 152
	')'  shift 183
	.  error


state 160
	boolExp:  EXISTS '('.dqlstmt ')' 

	SELECT  shift 7
	.  error

	dqlstmt  goto 184

state 161
	val:  IDENTIFIER '('.')' 

	')'  shift 185
	.  error


state 162
	val:  '@' IDENTIFIER.    (39)

	.  reduce 39 (src line 308)


state 163
	join:  JOINTYPE JOIN ds ON.boolExp 

	NOT  shift 126
	EXISTS  shift 129
	NULL  shift 136
	IDENTIFIER  shift 134
	NUMBER  shift 130
	VARCHAR  shift 131
	BOOLEAN  shift 132
	BLOB  shift 133
	AGGREGATE_FUNC  shift 38
	'-'  shift 127
	'('  shift 128
	'@'  shift 135
	.  error

	val  goto 124
	selector  goto 123
	col  goto 37
	boolExp  goto 186
	binExp  goto 125

state 164
	ds:  '(' tableRef opt_as_before opt_as ')'.    (60)

	.  reduce 60 (src line 434)


state 165
	ddlstmt:  CREATE TABLE opt_if_not_exists IDENTIFIER '(' colsSpec ',' PRIMARY KEY.IDENTIFIER ')' 

	IDENTIFIER  shift 187
	.  error


state 166
	opt_not_null:  NOT NULL.    (45)

	.  reduce 45 (src line 340)


state 167
	rows:  rows ','.row 

	'('  shift 145
	.  error

	row  goto 188

state 168
	row:  '(' values.')' 
	values:  values.',' val 

	','  shift 190
	')'  shift 189
	.  error


state 169
	values:  val.    (32)

	.  reduce 32 (src line 272)


state 170
	val:  IDENTIFIER.'(' ')' 

	'('  shift 161
	.  error


state 171
	dqlstmt:  SELECT opt_distinct opt_selectors FROM ds opt_joins opt_where opt_groupby opt_having opt_orderby.opt_limit opt_as 
	opt_limit: .    (77)

	LIMIT  shift 192
	.  reduce 77 (src line 525)

	opt_limit  goto 191

state 172
	opt_orderby:  ORDER.BY ordcols 

	BY  shift 193
	.  error


state 173
	opt_having:  HAVING boolExp.    (76)
	binExp:  boolExp.'+' boolExp 
	binExp:  boolExp.'-' boolExp 
	binExp:  boolExp.'/' boolExp 
	binExp:  boolExp.'*' boolExp 
	binExp:  boolExp.LOP boolExp 
	binExp:  boolExp.CMPOP boolExp 

	LOP  shift 154
	CMPOP  shift 155
	'+'  shift 150
	'-'  shift 151
	'*'  shift 153
	'/'  shift 152
	.  reduce 76 (src line 519)


state 174
	cols:  cols.',' col 
	opt_groupby:  GROUP BY cols.    (74)

	','  shift 194
	.  reduce 74 (src line 509)


state 175
	cols:  col.    (30)

	.  reduce 30 (src line 261)


state 176
	binExp:  boolExp.'+' boolExp 
	binExp:  boolExp '+' boolExp.    (96)
	binExp:  boolExp.'-' boolExp 
	binExp:  boolExp.'/' boolExp 
	binExp:  boolExp.'*' boolExp 
	binExp:  boolExp.LOP boolExp 
	binExp:  boolExp.CMPOP boolExp 

	'*'  shift 153
	'/'  shift 152
	.  reduce 96 (src line 622)

